[package]
name = "juejin-automatic-check-in"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
dotenv = "0.15.0"
lettre = { version = "0.11.9", features = ["smtp-transport"] }
reqwest ={ version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"

